style.css
@font-face {
    font-family: "Lato";
    src: local("Lato Black"), local("Lato-Black"), 
      url("../assets/fonts/Lato-Black.ttf") format("truetype");
    font-weight: 900;
  }
  
  @font-face {
    font-family: "Lato";
    src: local("Lato Bold"), local("Lato-Bold"), 
      url("../assets/fonts/Lato-Bold.ttf") format("truetype");
    font-weight: 700;
  }
  
  @font-face {
    font-family: "Lato";
    src: local("Lato Regular"), local("Lato-Regular"), 
      url("../assets/fonts/Lato-Regular.ttf") format("truetype");
    font-weight: 400;
  }
  
  @font-face {
    font-family: "Lato";
    src: local("Lato Light"), local("Lato-Light"), 
      url("../assets/fonts/Lato-Light.ttf") format("truetype");
    font-weight: 300;
  }
  *{
    box-sizing: border-box;  
    padding: 0;
    margin: 0;
  }
  body{
      
      font-family: 'Lato', sans-serif;
  }
  .container-1{
      width: 960px;
      margin: 0 auto;
  }
  header{
      height: 96px;
      background-color:#2d303a ;
      border-bottom: 6px solid #323746;
  }
  .head-block{
      display: flex;
      justify-content: space-between;
      align-items: center;
  }
  .logo{
      color: #ffffff;
  }
  .logo h1{
      font-weight: 700;
      font-size: 25px;
      letter-spacing: -0.5px;
      padding: 30px 10px;
      text-transform: uppercase;
  }
  h1 span{
      color: #f06c64;
  }
  .navigation {
      display: flex;
      justify-content: space-between;
      width: 381px;
      padding-right: 10px;
      padding-top: 9px;
    }
  .navigation a{
      color:#ffffff;
      text-decoration: none;
      text-transform: uppercase;
      display: inline-block;
      font-size: 12px;
      font-weight: 700;
      letter-spacing:-0.2px;
  }
  .navigation a:not(:first-child)::before {
      content: "\2219";
      display: inline-block;
      width: 1.5em;
      line-height: 1px;
      color: #494e62;
  }
  .navigation a:hover{
      color: #f06c64;
  }
  .slider{
      border-bottom: 5px solid #ea676b;
      background-color: #f06c64;
      height: 600px;
  }
  .slider-container{
      display: flex;
      justify-content: space-between;
      height: 586px;
      align-items: center;
  }
  .image-1{
      padding-right:73px ;
  }
  .arrow{
      width: 27px;
      height: 100%;
      
  }
  .arrow:hover{
      background-color: #ce5e57;
  }
  .arrow img{
      padding-top: 280px;
  }
  .arrow-right{
      padding-left:10px ;
      padding-right:10px;
  }
  .image-container{
      width: 795px;
      display: flex;
      justify-content: space-between;
      align-items: center;
  }
  .services {
    height: 499px;
    background-color: #f2f2f2;
    border-bottom: 6px solid #ffffff;
  }
  .title {
      margin: 0;
      padding-top: 59px;
      font-size: 30px;
      letter-spacing: -0.2px;
      font-weight: 700;
      color: #666d89;
      padding-left: 10px;
  }
  .description1 {
      margin-bottom: 43px;
      font-size:18px;
      letter-spacing: -0.23px;
      line-height: 30px;
      color: #767e9e;
      padding-left: 10px;
      padding-top: 17px;
  }
    
  .layout {
      display: flex;
      justify-content: space-between;
      flex-wrap: wrap;
  }
    
  .service1 {
      display: flex;
      justify-content: space-between;
      width: 312px;
      margin-bottom: 27px;
      margin-left: -3px;
  }
    
  .icon {
      width: 59px;
      height: 63px;
      padding-top: 4px;
      margin-left: 14px;
      margin-right: 20px;
  }
  .icon2{
    margin-left: 8px;
  }
  .icon3{
    margin-left: 2px;
  }
    
  .content {
      width: 226px;
  
  }
    
  .name {
      margin: 0;
      font-size: 18px;
      font-weight: 700;
      color: #666d89;
  }
    
  .description {
      margin: 8px 0 0;
      height: 66px;
      font-size: 12px;
      letter-spacing: 0.562px;
      line-height: 22px;
      overflow: hidden;
      color: #767e9e;
      text-align: justify;
  }  

html {
    font-size: 10px;
}
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}
body{
    
    font-family: 'Lato', sans-serif;
}
.container{
    width: 94rem;
    margin: 0 auto;
}
.portfolio{
    height: 86.9rem;
    background-color: #2d303a;
    color:#666d89;
    padding-top: 6rem;
    border-bottom: 6px solid #323746;
}
.portfolio__title{
    font-size: 3rem;
    font-weight: 700;
    letter-spacing: -0.01rem;
    margin-bottom: 2rem;
}
.portfolio__subTitle{
    font-size: 1.8rem;
    margin-bottom: 1.5rem;
    letter-spacing: -0.01rem;
    word-spacing: -0.08rem;
}
.navigation-image{
    font-size: 1.2rem;
    margin-bottom: 2rem;
}
.navigation-image__items{
    color:#666d89;
    border:1px solid #666d89;
    border-radius: 0.5rem;
    padding: 0.3rem 0.7rem;
    display: inline-block;
    margin-right: 0.6rem;
    word-spacing: -0.1rem;
}

.navigation-image__items,
.navigation-image__items:hover,
.navigation-image__items:active{
    text-decoration: none;
}
.navigation-image__items:hover,
.navigation-image__items:active{
    color:#c5c5c5;
    border-color: #c5c5c5;
}

.portfolio__images{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    height: 60rem;
    overflow: hidden;
}
.images__items{
    margin-bottom: 2rem;
}
.about-us{
    background-color: #f2f2f2;
    height: 73.4rem;
    padding-top: 6rem;
    color:#666d89;
    border-bottom: 6px solid #fff;
}
.about-us__title{
    font-size: 3rem;
    font-weight: 900;
    letter-spacing: -0.01rem;
    margin-bottom: 2rem;
}
.about-us__subTitle{
    font-size: 1.8rem;
    margin-bottom: 4.5rem;
    line-height: 2.9rem;
    font-weight: 300;
    word-spacing: 0.11rem;

}
.peoples{
    display: flex;
}
.person1{
    margin-right: 2rem;

}
.person2{
    margin-right: 2rem;

}
.peoples__item img{
    margin-bottom: 1.2rem;
}
.person__name{
    font-size: 1.8rem;
    font-weight: 900;
    letter-spacing: -0.02rem;
    margin-bottom: 1rem;
}
.person__description{
    font-size: 1.2rem;
    line-height: 2rem;
    font-weight: 400;
    margin-bottom: 2.4rem;
}
.social{
    display: flex;
}
.social__item{
    width: 32px;
    height: 32px;
    background-image: url('assets/img/sprait.png');
    background-repeat: no-repeat;
    border-radius: 50%;
    border: 1px solid #666d89;
    margin-right: 0.8rem;
}
.social__item:hover{
    cursor: pointer;
    background-color: #c5c5c5;
}
.social__facebook{
    background-position:  -1px -1px;
}
.social__gmail{
    background-position:  -41px -1px;
}
.social__twitter{
    background-position:  -81px -1px;
}
.social__in{
    background-position:  -121px -1px;
}
.form{
    background-color: #f06c64;
    height: 65.4rem;
    border-bottom: 6px solid #ea676b;
    color:#f0d8d9;
    
}
.form__title{
    font-size: 3rem;
    padding-top: 6rem;
    font-weight: 900;
    margin-bottom: 1.8rem;
}
.form__subtitle{
    font-size: 1.8rem;
    font-weight: 300;
    line-height: 3rem;
    letter-spacing: 0.015rem;
    margin-bottom: 4.2rem;
}
.container-form{
    display: flex;
    justify-content: space-around;
}
.form-item{
    width: 62rem;
    display: flex;
    flex-direction: column;
    margin-right: 2rem;
}
.form-item__items,
.form-item__items:hover,
.form-item__items:focus,
.form-item__items:active{
    border: none;
}

.form-item__items::-webkit-input-placeholder { 
    color: #f08586;
    font-size: 1.2rem; 
}
.form-item__items{
    background-color: #d6564f;
    border: none;
    color: #f08586;
    padding: 1.4rem;
    border-radius: 0.5rem;
    font-family: 'Lato', sans-serif;
}
.form-item__items:not(:nth-child(4)){
    margin-bottom: 1.7rem;
    height: 3.8rem;
}
.form-item__items:nth-child(4){
    height: 20rem;
    padding-top: 1rem;
    margin-bottom: 2rem;
}
.contact{
    width: 30rem;
}
.contact__title{
    font-size: 1.8rem;
    font-weight: 900;
    margin-bottom: 1rem;
}
.contact__subtitle{
    font-size: 1.2rem;
    font-weight: 400;
    line-height: 2rem;
    text-align: justify;
    letter-spacing: -0.02rem;
    margin-bottom: 2.8rem;
}
.contact-container{
    display: flex;
    flex-direction: column;
    font-size: 1.2rem;
}
.contact-container__item,
.contact-container__item:hover,
.contact-container__item:active{
    text-decoration: none;
    color:#f0d8d9 ;
}
.contact-container__item i{
    margin-right: 1rem;
    width: 1.2rem;
    text-align: center;
}
.contact-container__item{
    margin-bottom: 0.8rem;
}
footer{
    height: 7.5rem;
    background-color: #2d303a;
}
.footer{
    height: 7.7rem;
    display: flex;
    justify-content: space-between;
}
.copyright{
    height: 7.5rem;
    line-height: 7.5rem;
    font-size: 1.2rem;
    color: #666d89;
}
.social{
    display: flex;
    align-items: center;
}
.social__item{
    width: 32px;
    height: 32px;
    background-image: url('assets/img/sprait.png');
    background-repeat: no-repeat;
    border-radius: 50%;
    border: 1px solid #666d89;
    margin-right: 0.8rem;
}
.social__item:last-child{
    margin-right: 0;
}
.social__item:hover{
    cursor: pointer;
    background-color: #c5c5c5;
}
.social__facebook{
    background-position:  -1px -1px;
}
.social__gmail{
    background-position:  -41px -1px;
}
.social__twitter{
    background-position:  -81px -1px;
}
.social__in{
    background-position:  -121px -1px;
}

button{
    width: 20rem;
    height: 3rem;
    background-color: #2d303a;
    display: block;
    border: none;
    color: #c5c5c5;
}
button:hover{
    background-color: #494e62;
}

